--- a/src/app/modules/caja-chica/pages/listar-cajas/listar-cajas.html
+++ b/src/app/modules/caja-chica/pages/listar-cajas/listar-cajas.html
@@ -3,7 +3,7 @@
     <div class="caja-card">
         <div class="caja-header">
             <div class="header-content">
-                <h1 class="caja-title">💰 Caja Chica</h1>
+                <h1 class="caja-title">Caja Chica</h1>
                 <div class="header-actions">
                     <button class="btn-primary" (click)="abrirCaja()">
             + Abrir Caja
